Fix disqus overlay on mobile

--- a/_scss/_disqus.scss
+++ b/_scss/_disqus.scss
@@ -2,13 +2,13 @@
 // thanks to http://developer-paradize.blogspot.com/2014/06/how-to-hide-or-remove-disqus-footer.html
 
 $disqusOverlay: 55px;
-$disqusOverlayMobile: 185px;
+$disqusOverlayMobile: 165px;
 
 #disqus_thread{
   position: relative;
   min-height: $disqusOverlay;
   @include mobile {
-    height: $disqusOverlayMobile;
+    min-height: $disqusOverlayMobile;
   }
 }
 
